# game-poc

./: pyproject.toml
items/: attributes.py  attributes.toml  display.py  items.py  roll.py
